--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "json-server server.json -p 3333 -w",
+    "lint": "eslint src --ext .tsx,.ts",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -23,15 +24,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@types/styled-components": "^5.1.34",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint": "^8.20.0",
     "json-server": "^0.17.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
